--- a/src/IdentityService/wwwroot/css/site.css
+++ b/src/IdentityService/wwwroot/css/site.css
@@ -1,9 +1,13 @@
-﻿.welcome-page .logo {
-  width: 64px;
+﻿body {
+  font-family: "Noto Sans";
+}
+
+.welcome-page .logo {
+  width: 232px;
 }
 
 .icon-banner {
-  width: 32px;
+  width: 132px;
 }
 
 .body-container {
