--- a/src/IdentityService/wwwroot/css/site.scss
+++ b/src/IdentityService/wwwroot/css/site.scss
@@ -1,11 +1,15 @@
+body {
+  font-family: "Noto Sans";
+}
+
 .welcome-page {
   .logo {
-    width: 64px;
+    width: 232px;
   }
 }
 
 .icon-banner {
-  width: 32px;
+  width: 132px;
 }
 
 .body-container {
