--- a/src/IdentityService/Pages/Shared/_Nav.cshtml
+++ b/src/IdentityService/Pages/Shared/_Nav.cshtml
@@ -12,8 +12,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <a href="~/" class="navbar-brand">
-            <img src="~/duende-logo.svg" class="icon-banner">
-            Duende IdentityServer
+            <img src="~/logo-imssb-blanco.png" class="icon-banner">
+            IMSS Bienestar Identity SSO
         </a>
 
         @if (!string.IsNullOrWhiteSpace(name))
